<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sample.aj.sample.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginLeft="50dp"
        android:layout_alignTop="@+id/firstval"
        android:layout_toEndOf="@+id/firstval"
        android:layout_marginStart="27dp"
        android:layout_marginTop="6dp" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignTop="@+id/secondval"
        android:layout_alignStart="@+id/num1" />

    <TextView
        android:text=""
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/result"
        android:hint="@string/res"
        android:layout_marginTop="62dp"
        android:textColorHint="@android:color/darker_gray"
        android:layout_below="@+id/num2"
        android:layout_toEndOf="@+id/title"
        android:textColor="@android:color/black"
        android:textAlignment="center" />

    <Button
        android:text="@string/btn"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:id="@+id/btn"
        android:layout_below="@+id/result"
        android:layout_alignStart="@+id/result"
        android:layout_marginTop="66dp"
        android:layout_alignEnd="@+id/result" />

    <TextView
        android:id="@+id/firstval"
        android:layout_marginTop="13dp"
               android:layout_height="40dp"
        android:text="@string/firstval"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/secondval"
        android:layout_marginTop="27dp"
        android:layout_height="40dp"
        android:text="@string/secval"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/num1"
        android:layout_alignParentStart="true" />

</RelativeLayout>
